--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -14,6 +14,10 @@
 <a href="bullet_8h_source.html"/>
 <a href="class_array_list_test_fixture-members.html"/>
 <a href="class_array_list_test_fixture.html"/>
+<a href="class_hash_map_tests-members.html"/>
+<a href="class_hash_map_tests.html"/>
+<a href="class_ordered_set_tests-members.html"/>
+<a href="class_ordered_set_tests.html"/>
 <a href="classes.html"/>
 <a href="classexample_1_1_bullet-members.html"/>
 <a href="classexample_1_1_bullet.html"/>
@@ -96,6 +100,8 @@
 <a href="classssuds_1_1_array_list_1_1_array_list_iterator.html#add51bddc7c966d0b8e5e15ad6a0a9f42"/>
 <a href="classssuds_1_1_array_list_1_1_array_list_iterator.html#ae5a0b7ee8c18a93031e2352ea20f7e78"/>
 <a href="classssuds_1_1_array_list_1_1_array_list_iterator.html#aecf4ddc7dc315755759a8f777ad73d3e"/>
+<a href="classssuds_1_1_hash_map-members.html"/>
+<a href="classssuds_1_1_hash_map.html"/>
 <a href="classssuds_1_1_linked_list-members.html"/>
 <a href="classssuds_1_1_linked_list.html"/>
 <a href="classssuds_1_1_linked_list.html#a100de30139625ad4e468c0e012e06af5"/>
@@ -121,6 +127,15 @@
 <a href="classssuds_1_1_linked_list_1_1_linked_list_iterator.html#a52772bf30dfed211ca3d68b260a091a2"/>
 <a href="classssuds_1_1_linked_list_1_1_linked_list_iterator.html#a6323fa48dbe8400be0812e6e11533f81"/>
 <a href="classssuds_1_1_linked_list_1_1_linked_list_iterator.html#ab808764b69910247801d98937ed6a453"/>
+<a href="classssuds_1_1_ordered_set-members.html"/>
+<a href="classssuds_1_1_ordered_set.html"/>
+<a href="classssuds_1_1_ordered_set.html#a2541e0758a82ecd556a1b62a82b16f00"/>
+<a href="classssuds_1_1_ordered_set.html#a2cc65c0fabdf82d3980a3cf635ccb9ce"/>
+<a href="classssuds_1_1_ordered_set.html#a4a6908e7ef9d10f26d40137a76f59b85"/>
+<a href="classssuds_1_1_ordered_set.html#a5e5793d063c806969ef1a0387d90a356"/>
+<a href="classssuds_1_1_ordered_set.html#a7e6a8da1a80267d482bcb83dc37dc696"/>
+<a href="classssuds_1_1_ordered_set.html#ad38f67804d6d943e4bf56d1da8e7ab00"/>
+<a href="classssuds_1_1_ordered_set.html#aee7137b5b2b60a21b3095179984f4da3"/>
 <a href="classssuds__drawing_1_1_text_circle-members.html"/>
 <a href="classssuds__drawing_1_1_text_circle.html"/>
 <a href="classssuds__drawing_1_1_text_circle.html#a0fc29eee97e4e638d03f69d6ff4e170f"/>
@@ -149,9 +164,11 @@
 <a href="functions_func.html"/>
 <a href="functions_rela.html"/>
 <a href="functions_vars.html"/>
+<a href="hash__map_8h_source.html"/>
 <a href="hierarchy.html"/>
 <a href="index.html"/>
 <a href="linked__list_8h_source.html"/>
+<a href="ordered__set_8h_source.html"/>
 <a href="person_8h_source.html"/>
 <a href="person__database_8h_source.html"/>
 <a href="text__circle_8h_source.html"/>
